# pyth-client-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: publish.yml  rust.yml
examples/: get_accounts.rs
src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  price_conf.rs  processor.rs
tests/: common.rs  instruction_count.rs  integration.rs  stale_price.rs
