[package]
name = "pyth-client"
version = "0.2.2"
authors = ["Richard Brooks"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://pyth.network"
repository = "https://github.com/pyth-network/pyth-client-rs"
description = "pyth price oracle data structures and example usage"
keywords = [ "pyth", "solana", "oracle" ]
readme = "README.md"

[features]
test-bpf = []

[dependencies]
solana-program = "1.6.7"

[dev-dependencies]
solana-client = "1.6.7"
solana-sdk = "1.6.7"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

