[package]
name = "pyth-client"
version = "0.2.2"
authors = ["Richard Brooks"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://pyth.network"
repository = "https://github.com/pyth-network/pyth-client-rs"
description = "pyth price oracle data structures and example usage"
keywords = [ "pyth", "solana", "oracle" ]
readme = "README.md"

[features]
test-bpf = []
no-entrypoint = []

[dependencies]
solana-program = "1.8.1"
borsh = "0.9"
borsh-derive = "0.9.0"

[dev-dependencies]
solana-program-test = "1.8.1"
solana-client = "1.8.1"
solana-sdk = "1.8.1"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

